@startuml

title __SIMPLE_MVVM_JAVA_EXAMPLE.APP's Class Diagram__\n

  namespace com.anwar.simplemvvmjavaexample {
    interface com.anwar.simplemvvmjavaexample.Api {
    }
  }
  

  namespace com.anwar.simplemvvmjavaexample {
    class com.anwar.simplemvvmjavaexample.BuildConfig {
    }
  }
  

  namespace com.anwar.simplemvvmjavaexample {
    class com.anwar.simplemvvmjavaexample.MainActivity {
    }
  }
  

  namespace com.anwar.simplemvvmjavaexample {
    class com.anwar.simplemvvmjavaexample.MainModel {
    }
  }
  

  namespace com.anwar.simplemvvmjavaexample {
    class com.anwar.simplemvvmjavaexample.MainModelAdapter {
    }
  }
  

  namespace com.anwar.simplemvvmjavaexample {
    class com.anwar.simplemvvmjavaexample.MainViewModel {
    }
  }
  

  com.anwar.simplemvvmjavaexample.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.anwar.simplemvvmjavaexample.MainActivity o-- com.anwar.simplemvvmjavaexample.MainModelAdapter : adapter
  com.anwar.simplemvvmjavaexample.MainModelAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.anwar.simplemvvmjavaexample.MainViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
